generate button v1 added

--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -11,5 +11,6 @@
     <div class="grid-container" id="grid-container">
         
     </div>
+    <button type="button" id="generate-button">Generate</button>
 </body>
 </html>
