set grid size and generate grid

--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -8,9 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <button type="button" class="button-1" id="generate-button">Generate</button>
     <div class="grid-container" id="grid-container">
         
     </div>
-    <button type="button" id="generate-button">Generate</button>
 </body>
 </html>
