--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="title-container">
+        <h1 class="title">Etch-a-Sketch</h1>
+    </div>
     <button type="button" class="button-1" id="generate-button">Generate</button>
     <div class="grid-container" id="grid-container">
         
