--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -12,6 +12,8 @@
         <h1 class="title">Etch-a-Sketch</h1>
     </div>
     <button type="button" class="button-1" id="generate-button">Generate</button>
+    <button type="button" class="button-1" id="sketch-button">Start sketching</button>
+    <button type="button" class="button-1" id="clear-button">Clear grid</button>
     <div class="grid-container" id="grid-container">
         
     </div>
