mouseover sketch, added erase button

--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -13,6 +13,7 @@
     </div>
     <button type="button" class="button-1" id="generate-button">Generate</button>
     <button type="button" class="button-1" id="sketch-button">Start sketching</button>
+    <button type="button" class="button-1" id="erase-button">Start sketching</button>
     <button type="button" class="button-1" id="clear-button">Clear grid</button>
     <div class="grid-container" id="grid-container">
         
