--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -11,8 +11,8 @@
     <div class="title-container">
         <h1 class="title">Etch-a-Sketch</h1>
     </div>
+    <input type="number" placeholder="Enter grid size (max: 100)" id="size-input">
     <button type="button" class="button-1" id="generate-button">Generate</button>
-    <button type="button" class="button-1" id="sketch-button">Start sketching</button>
     <!-- <button type="button" class="button-1" id="eraser-button">Eraser</button> -->
     <button type="button" class="button-1" id="clear-button">Clear grid</button>
     <div class="grid-container" id="grid-container">
