new drawing and cleargrid functions

--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -13,6 +13,7 @@
     </div>
     <input type="number" placeholder="Enter grid size (max: 100)" id="size-input">
     <button type="button" class="button-1" id="generate-button">Generate</button>
+    <button type="button" class="button-1" id="pencil-button">Pencil mode</button>
     <!-- <button type="button" class="button-1" id="eraser-button">Eraser</button> -->
     <button type="button" class="button-1" id="clear-button">Clear grid</button>
     <div class="grid-container" id="grid-container">
