--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -12,10 +12,14 @@
         <h1 class="title">Etch-a-Sketch</h1>
     </div>
     <input type="number" placeholder="Enter grid size (max: 100)" id="size-input">
+    <div class="button-container" id="button-container">
     <button type="button" class="button-1" id="generate-button">Generate</button>
     <button type="button" class="button-1" id="pencil-button">Pencil mode</button>
+    <button type="button" class="button-1" id="rainbow-button">Rainbow mode</button>
+    <button type="button" class="button-1" id="twice-button">TWICE!</button>
     <button type="button" class="button-1" id="eraser-button">Eraser</button>
     <button type="button" class="button-1" id="clear-button">Clear grid</button>
+    </div>
     <div class="grid-container" id="grid-container">
         
     </div>
